--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,14 +12,17 @@
 }
 .center{
     max-width: 1280px;
-    padding: 0 2%;
+    padding: 0 1%;
     margin: 0 auto;
 }
 .w33{
     width: 33.3%;
+    padding: 0 2%;
+    text-align: center;
 }
 .w50{
     width: 50%;
+    padding: 0 2%;
 }
 .left{
     float: left;
@@ -30,6 +33,10 @@
 .clear{
     clear: both;
 }
+img{
+    width: 100%;
+    max-width: 350px;
+}
 
 /* Estilização da pagina */
 header{background: #673AB7; padding: 10px 0;}
@@ -39,8 +46,164 @@ nav.desktop li{display: inline-block; text-transform: uppercase; padding: 0 25px
 font-family: 'Oxygen', sans-serif;}
 nav.desktop a{color: #fff; text-decoration: none; }
 
+/*efeito de sombreamento e imagem */
+.banner-main{
+    width: 100%;
+    height: 600px;
+    background-image: url('../bg-main.png');
+    background-size: cover;
+    position: relative;
+}
+
+.overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+
+}
+.form-main{
+    width: 98%;
+    max-width: 650px;
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.form-main input[type=email]{
+    width: 100%;
+    margin-top: 13px;
+    height: 66px;
+    background: #fff;
+    font-size: 1.2em;
+    color: #333;
+    padding-left: 10px;
+}
+
+.form-main input[type=submit]{
+    width: 100%;
+    border: none;
+    text-transform: uppercase;
+    margin-top: 8px;
+    height: 66px;
+    background: rgb(96, 60, 156);
+    color: #fff;
+    font-size: 1.5em;
+    font-family: 'Lato';
+    cursor: pointer;
+    border-bottom: 4px solid #512DA8;
+}
+
+section.banner-main form h2{
+    color: #fff;
+    font-weight: 300;
+    font-size: 1.9em;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+
+/* Estilizando seção autor */
+
+section.descricao-autor{
+    padding: 30px 0;
+}
+section.descricao-autor h2{
+    font-size: 1.2em;
+    font-weight: 400;
+    font-family: 'Lato';
+    color: #444;
+
+}
+section.descricao-autor p{
+    font-family: 'Lato';
+    color: #444;
+    margin-top: 10px;
+}
+
+section.especialidades{
+    padding: 40px 0;
+    background: #e2e2e2; 
+}
+
+section.especialidades h2.title{font-size: 2em; color: rgb(80, 80, 80); text-align: center;
+font-weight: 500; font-family: 'Ubuntu';}
+
+.box-espec h3{font-size: 2.8em; color: #404580; text-align: center; padding-top: 15px}
+
+.box-espec h4{text-align: center; color: rgb(77, 77, 77); font-size: 1.5em; font-family: 'Lato';}
+
+.box-espec p{color: #999; font-size: 1.2em; margin-top: 10px;}
+
+/*Estilizando seção Depoimentos e Serviços */
+section.extras{padding: 40px 0; background: #404580;}
+
+section.extras .title{color: #fff; font-weight: 500; font-family: 'Ubuntu';
+margin-bottom: 15px;}
+
+.depoimento-single{padding: 15px 0; border-bottom: 1px solid #5056a0;}
+p.dep-descricao{color: #fff; font-family: 'Lato'; font-weight: 300;}
+p.nome-autor{font-weight: bold; margin-top: 10px; color: #fff; font-family: 'Ubuntu';
+text-align: center;}
+
+
+.servicos ul{ margin: 20px 0; list-style-position: inside;}
+.servicos li{color: #fff; font-family: 'Lato'; font-weight: 300; padding: 10px 0;}
+
 .mobile{display: none;}
 
+.rodape{background: #313462; padding: 30px 0;}
 .txt-footer{
+        font-weight: 500;
+        font-family: 'Lato';
+        color: #fff;
         text-align: center;
 }
+
+/* Responsividade  Seção Autor*/
+@media screen and (max-width: 667px){
+    .w50{
+        padding: 20px;
+        width: 100%;
+    }
+    img{display: block; margin: 0 auto; 
+    float: none !important;}
+}
+@media screen and (max-width: 842px){
+    .w50{
+        padding: 20px;
+        width: 100%;
+    }
+    .w33{
+        padding: 20px;
+        width: 100%;
+    }
+    .box-espec{margin: 0; padding: 40px 20px;}
+    img{display: block; margin: 0 auto; max-width: 400px;
+    float: none !important;}
+
+}
+/* Responsividade do Header */
+
+@media screen and (max-width: 586px){
+    nav.desktop{display: none;}
+    nav.mobile{display: block;}
+    .menu-mobile{font-size: 30px; color: #fff; cursor: pointer;}
+
+    nav.mobile ul{z-index: 3; left: 0; top: 58px; display: block;
+    text-align: center; position: absolute; width: 100%;}
+
+    nav.mobile li{font-size:  0.9em; border-bottom: 1px solid #ccc;
+    background: #fff; font-family: 'Lato'; text-transform: uppercase;
+    font-weight: 600; padding: 8px 0;}
+
+    nav.mobile li a{text-decoration: none; color: #444; display: block;}
+}
+
+/* Responsividade Especialidades */
+
+
