--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,9 +194,9 @@ text-align: center;}
     nav.mobile{display: block;}
     .menu-mobile{font-size: 30px; color: #fff; cursor: pointer;}
 
-    nav.mobile ul{z-index: 3; left: 0; top: 58px; display: block;
+    nav.mobile ul{z-index: 3; left: 0; top: 58px; display: none;
     text-align: center; position: absolute; width: 100%;}
-
+    .menu-mobile{display: block;}
     nav.mobile li{font-size:  0.9em; border-bottom: 1px solid #ccc;
     background: #fff; font-family: 'Lato'; text-transform: uppercase;
     font-weight: 600; padding: 8px 0;}
